<resources>
    <string name="app_name">Pacifica Agent</string>
    <string name="title_home">Home</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rincian_pembayaran">Rincian Pembayaran</string>
    <string name="tanggal">Tanggal</string>
    <string name="penyedia_layanan">Penyedia Layanan</string>
    <string name="no_pelanggan">No Pelanggan</string>
    <string name="nama">Nama</string>
    <string name="nominal">Nominal</string>
    <string name="biaya_admin">Biaya Admin</string>
    <string name="total_tagihan">Total Tagihan</string>
    <string name="title_detail_pembayaran">DETAIL PEMBAYARAN</string>
    <string name="tarif_daya">Tarif/Daya</string>
    <string name="kode_token">Kode Token</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="nomor_va">Nomor VA</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="metode">Metode</string>
    <string name="pembelian_ewallet">Pembelian EWallet %1$s</string>
    <string name="pembelian_pulsa_paket_data">Pembelian Pulsa Paket Data</string>
    <string name="top_up_saldo_pacificapay">Top Up Saldo PacificaPay</string>
    <string name="transaksi_tidak_diketahui">Transaksi Tidak Diketahui</string>
</resources>