<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cvDetailPembayaran"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="24dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ivLayananPulsa"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_konfirmasi"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_detail_pembayaran"
            android:textSize="18sp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tanggal" />

            <TextView
                android:id="@+id/tvTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25 -06-2025" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/penyedia_layanan" />

            <TextView
                android:id="@+id/tvPenyediaLayanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Frist Media" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_pelanggan" />

            <TextView
                android:id="@+id/tvNoPelanggan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1923006578" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nama" />

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rafi Fitrianto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nominal" />

            <TextView
                android:id="@+id/tvNominal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rp199.900" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/biaya_admin" />

            <TextView
                android:id="@+id/tvBiayaAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rp2.500" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/dashed_line" />

        <!-- Total Tagihan -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_total_tagihan"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_tagihan"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalTagihan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rp202.400" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
