<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tokenListrik.KonfirmasiTokenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FF5722"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3">

        <TextView
            android:id="@+id/tvTitlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rincian_pembayaran"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivLayananPulsa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_berhasil"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvTransaksiSukses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Transaksi Kamu Berhasil"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/tanggalPembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:text="25 Juni 2025"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cvDetailPembayaran"
        app:layout_constraintStart_toStartOf="@+id/cvDetailPembayaran" />

    <!-- Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetailPembayaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card_konfirmasi"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No Meter"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvNoMeter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="86204847148"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nama"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvNama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rafi Fitrianto"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tarif_daya"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTarifDaya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RI/900"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nominal"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvNominal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp20.000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Harga"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvHarga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp20.570"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutKodeToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kode_token"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvKodeToken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 7090-1111-0901-9009-1001"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/dashed_line" />

            <!-- Total Tagihan -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_total_tagihan"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_tagihan"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTotalTagihan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp20.570" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <!-- Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/konfirmasiBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/custom_button"
        android:text="Beli Sekarang"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    Progress Bar-->
    <include
        layout="@layout/loading_layout_overlay"
        android:id="@+id/loadingOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>